--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <h1 data-i18n="hero.title">Transforming ideas into elegant digital solutions</h1>
             <a href="#" class="cta-button" data-i18n="hero.cta">Download CV</a>
             <div class="social-links">
-                <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+                <a href="https://www.instagram.com/petkokachikov/" target="_blank" aria-label="Instagram">
                     <i class="bi bi-instagram"></i>
                 </a>
-                <a href="https://twitter.com/" target="_blank" aria-label="X (Twitter)">
+                <a href="https://x.com/PKachikov" target="_blank" aria-label="X (Twitter)">
                     <i class="bi bi-twitter-x"></i>
                 </a>
-                <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
+                <a href="https://bg.linkedin.com/in/petko-kachikov-a7a072263" target="_blank" aria-label="LinkedIn">
                     <i class="bi bi-linkedin"></i>
                 </a>
                 <a href="https://github.com/" target="_blank" aria-label="GitHub">
@@ -338,13 +338,13 @@
                 <div class="footer-section">
                     <h3 data-i18n="footer.connect">Connect</h3>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn">
+                        <a href="https://bg.linkedin.com/in/petko-kachikov-a7a072263" target="_blank" aria-label="LinkedIn">
                             <i class="bi bi-linkedin"></i>
                         </a>
-                        <a href="https://twitter.com/" target="_blank" aria-label="X (Twitter)">
+                        <a href="https://x.com/PKachikov" target="_blank" aria-label="X (Twitter)">
                             <i class="bi bi-twitter-x"></i>
                         </a>
-                        <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+                        <a href="https://www.instagram.com/petkokachikov/" target="_blank" aria-label="Instagram">
                             <i class="bi bi-instagram"></i>
                         </a>
                         <a href="https://github.com/" target="_blank" aria-label="GitHub">
