--- a/index.html
+++ b/index.html
@@ -287,18 +287,19 @@
             <h2 data-i18n="projects.title">Projects</h2>
             <div class="slider-container">
                 <button class="slider-nav prev" aria-label="Previous projects">
-                    <i class="fas fa-chevron-left"></i>
+                    <i class="bi bi-chevron-left"></i>
                 </button>
                 <div class="projects-slider">
                     <div class="projects-track" id="projects-track">
+                        <!-- Projects will be loaded here dynamically -->
                         <div class="loading">
-                            <i class="fas fa-spinner fa-spin"></i>
-                            <p data-i18n="projects.loading">Loading projects...</p>
+                            <i class="bi bi-arrow-repeat"></i>
+                            <p>Loading projects...</p>
                         </div>
                     </div>
                 </div>
                 <button class="slider-nav next" aria-label="Next projects">
-                    <i class="fas fa-chevron-right"></i>
+                    <i class="bi bi-chevron-right"></i>
                 </button>
             </div>
         </div>
